# django/voxweb/api/serializers.py
@@ -2,7 +2,7 @@ from urllib.parse import unquote
 
 from rest_framework import serializers
 
-from api.models import ProductImage, Product
+from api.models import ProductImage, Product, ProductCountDownloaded
 
 
 class ProductImageSerializer(serializers.ModelSerializer):
@@ -18,7 +18,7 @@ class ProductImageSerializer(serializers.ModelSerializer):
         model = ProductImage
         fields = ['file', 'alt']
 
-    
+
 class ProductSerializer(serializers.ModelSerializer):
     """
     Сериализатор для модели Product
@@ -33,13 +33,38 @@ class ProductSerializer(serializers.ModelSerializer):
         """
         model = Product
         fields = ['id', 'new_price', 'old_price', 'count_in_stock', 'date', 'title', 'image', 'rating', 'href', 'sale']
-        
+
     def create(self, validated_data):
         image_data = validated_data.pop('image')
         image_serializer = ProductImageSerializer(data=image_data)
         if image_serializer.is_valid(raise_exception=True):
             image = image_serializer.save()
-            
+
             return Product.objects.create(**validated_data, image_id=image.id)
-        
+
         return image_serializer.errors
+
+
+class ProductCountDownloadedSerializer(serializers.ModelSerializer):
+    """
+    Сериализатор для модели Product
+    """
+
+    class Meta:
+        """
+        Метакласс для определения модели и полей модели, с которыми будет работать сериализатор
+        """
+        model = ProductCountDownloaded
+        fields = ['count']
+
+
+class ProductShortSerializer(serializers.ModelSerializer):
+    """
+    Сериализатор для модели Product
+    """
+    class Meta:
+        """
+        Метакласс для определения модели и полей модели, с которыми будет работать сериализатор
+        """
+        model = Product
+        fields = ['title', 'href']
